tests/snapshots/lexer_snapshots__lexer_all@tokens-146.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p4_default_method_does_not_require_struct_impl.of
---
Ok(
    [
        Token {
            token_type: Interface,
            position: 9,
            line: 1,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "I",
            ),
            position: 11,
            line: 1,
            column: 12,
        },
        Token {
            token_type: LeftBrace,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Function,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "f",
            ),
            position: 24,
            line: 1,
            column: 25,
        },
        Token {
            token_type: LeftParen,
            position: 25,
            line: 1,
            column: 26,
        },
        Token {
            token_type: RightParen,
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: LeftBrace,
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: RightBrace,
            position: 29,
            line: 1,
            column: 30,
        },
        Token {
            token_type: RightBrace,
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: Struct,
            position: 38,
            line: 2,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "S",
            ),
            position: 40,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Colon,
            position: 42,
            line: 2,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "I",
            ),
            position: 44,
            line: 2,
            column: 13,
        },
        Token {
            token_type: LeftBrace,
            position: 46,
            line: 2,
            column: 15,
        },
        Token {
            token_type: RightBrace,
            position: 47,
            line: 2,
            column: 16,
        },
    ],
)
