tests/snapshots/lexer_snapshots__lexer_all@tokens-147.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p2_unknown_type_errors.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "foo",
            ),
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: LeftParen,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: RightParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: Colon,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Identifier(
                "Nope",
            ),
            position: 20,
            line: 1,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: RightBrace,
            position: 23,
            line: 1,
            column: 24,
        },
    ],
)
