tests/snapshots/lexer_snapshots__lexer_all@tokens-148.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p3_extend_adds_specialised_method.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Foo",
            ),
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: LeftBrace,
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: RightBrace,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Extend,
            position: 20,
            line: 2,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Foo",
            ),
            position: 24,
            line: 2,
            column: 11,
        },
        Token {
            token_type: LeftBrace,
            position: 26,
            line: 2,
            column: 13,
        },
        Token {
            token_type: Function,
            position: 35,
            line: 2,
            column: 22,
        },
        Token {
            token_type: Identifier(
                "m",
            ),
            position: 37,
            line: 2,
            column: 24,
        },
        Token {
            token_type: LeftParen,
            position: 38,
            line: 2,
            column: 25,
        },
        Token {
            token_type: RightParen,
            position: 39,
            line: 2,
            column: 26,
        },
        Token {
            token_type: LeftBrace,
            position: 41,
            line: 2,
            column: 28,
        },
        Token {
            token_type: RightBrace,
            position: 42,
            line: 2,
            column: 29,
        },
        Token {
            token_type: RightBrace,
            position: 44,
            line: 2,
            column: 31,
        },
    ],
)
