tests/snapshots/lexer_snapshots__lexer_all@tokens-149.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p4_interface_field_required_on_struct.of
---
Ok(
    [
        Token {
            token_type: Interface,
            position: 9,
            line: 1,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "I",
            ),
            position: 11,
            line: 1,
            column: 12,
        },
        Token {
            token_type: LeftBrace,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "x",
            ),
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: Colon,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 20,
            line: 1,
            column: 21,
        },
        Token {
            token_type: RightBrace,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Struct,
            position: 29,
            line: 2,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "S",
            ),
            position: 31,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Colon,
            position: 33,
            line: 2,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "I",
            ),
            position: 35,
            line: 2,
            column: 13,
        },
        Token {
            token_type: LeftBrace,
            position: 37,
            line: 2,
            column: 15,
        },
        Token {
            token_type: RightBrace,
            position: 38,
            line: 2,
            column: 16,
        },
    ],
)
