tests/snapshots/lexer_snapshots__lexer_all@tokens-150.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p3_specialised_extend_records_concrete_args.of
---
Ok(
    [
        Token {
            token_type: Struct,
            position: 6,
            line: 1,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Box",
            ),
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: LT,
            position: 11,
            line: 1,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "T",
            ),
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: GT,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftBrace,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: RightBrace,
            position: 16,
            line: 1,
            column: 17,
        },
        Token {
            token_type: Extend,
            position: 23,
            line: 2,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "Box",
            ),
            position: 27,
            line: 2,
            column: 11,
        },
        Token {
            token_type: LT,
            position: 28,
            line: 2,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 31,
            line: 2,
            column: 15,
        },
        Token {
            token_type: GT,
            position: 32,
            line: 2,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 34,
            line: 2,
            column: 18,
        },
        Token {
            token_type: Function,
            position: 43,
            line: 2,
            column: 27,
        },
        Token {
            token_type: Identifier(
                "is_int",
            ),
            position: 50,
            line: 2,
            column: 34,
        },
        Token {
            token_type: LeftParen,
            position: 51,
            line: 2,
            column: 35,
        },
        Token {
            token_type: RightParen,
            position: 52,
            line: 2,
            column: 36,
        },
        Token {
            token_type: LeftBrace,
            position: 54,
            line: 2,
            column: 38,
        },
        Token {
            token_type: RightBrace,
            position: 55,
            line: 2,
            column: 39,
        },
        Token {
            token_type: RightBrace,
            position: 57,
            line: 2,
            column: 41,
        },
    ],
)
