tests/snapshots/lexer_snapshots__lexer_all@tokens-154.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/validator/p5_call_arg_type_mismatch_errors.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "f",
            ),
            position: 10,
            line: 1,
            column: 11,
        },
        Token {
            token_type: LeftParen,
            position: 11,
            line: 1,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 12,
            line: 1,
            column: 13,
        },
        Token {
            token_type: Colon,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: RightParen,
            position: 18,
            line: 1,
            column: 19,
        },
        Token {
            token_type: LeftBrace,
            position: 20,
            line: 1,
            column: 21,
        },
        Token {
            token_type: RightBrace,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: Function,
            position: 30,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 35,
            line: 2,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 36,
            line: 2,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 37,
            line: 2,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 39,
            line: 2,
            column: 18,
        },
        Token {
            token_type: Identifier(
                "f",
            ),
            position: 41,
            line: 2,
            column: 20,
        },
        Token {
            token_type: LeftParen,
            position: 42,
            line: 2,
            column: 21,
        },
        Token {
            token_type: StringLit(
                "hola",
            ),
            position: 48,
            line: 2,
            column: 27,
        },
        Token {
            token_type: RightParen,
            position: 49,
            line: 2,
            column: 28,
        },
        Token {
            token_type: Semicolon,
            position: 50,
            line: 2,
            column: 29,
        },
        Token {
            token_type: RightBrace,
            position: 52,
            line: 2,
            column: 31,
        },
    ],
)
