tests/snapshots/lexer_snapshots__lexer_all@tokens-155.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p4_interface_method_signature_mismatch_errors.of
---
Ok(
    [
        Token {
            token_type: Interface,
            position: 9,
            line: 1,
            column: 10,
        },
        Token {
            token_type: Identifier(
                "I",
            ),
            position: 11,
            line: 1,
            column: 12,
        },
        Token {
            token_type: LeftBrace,
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: Function,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "f",
            ),
            position: 24,
            line: 1,
            column: 25,
        },
        Token {
            token_type: LeftParen,
            position: 25,
            line: 1,
            column: 26,
        },
        Token {
            token_type: Identifier(
                "a",
            ),
            position: 26,
            line: 1,
            column: 27,
        },
        Token {
            token_type: Colon,
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: Identifier(
                "i64",
            ),
            position: 31,
            line: 1,
            column: 32,
        },
        Token {
            token_type: RightParen,
            position: 32,
            line: 1,
            column: 33,
        },
        Token {
            token_type: Semicolon,
            position: 33,
            line: 1,
            column: 34,
        },
        Token {
            token_type: RightBrace,
            position: 35,
            line: 1,
            column: 36,
        },
        Token {
            token_type: Struct,
            position: 42,
            line: 2,
            column: 7,
        },
        Token {
            token_type: Identifier(
                "S",
            ),
            position: 44,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Colon,
            position: 46,
            line: 2,
            column: 11,
        },
        Token {
            token_type: Identifier(
                "I",
            ),
            position: 48,
            line: 2,
            column: 13,
        },
        Token {
            token_type: LeftBrace,
            position: 50,
            line: 2,
            column: 15,
        },
        Token {
            token_type: Function,
            position: 59,
            line: 2,
            column: 24,
        },
        Token {
            token_type: Identifier(
                "f",
            ),
            position: 61,
            line: 2,
            column: 26,
        },
        Token {
            token_type: LeftParen,
            position: 62,
            line: 2,
            column: 27,
        },
        Token {
            token_type: RightParen,
            position: 63,
            line: 2,
            column: 28,
        },
        Token {
            token_type: LeftBrace,
            position: 65,
            line: 2,
            column: 30,
        },
        Token {
            token_type: RightBrace,
            position: 66,
            line: 2,
            column: 31,
        },
        Token {
            token_type: RightBrace,
            position: 68,
            line: 2,
            column: 33,
        },
    ],
)
