tests/snapshots/lexer_snapshots__lexer_all@tokens-159.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p5_as_cast_changes_type.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: LeftParen,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Int(
                "5",
            ),
            position: 20,
            line: 1,
            column: 21,
        },
        Token {
            token_type: As,
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Identifier(
                "f64",
            ),
            position: 27,
            line: 1,
            column: 28,
        },
        Token {
            token_type: RightParen,
            position: 28,
            line: 1,
            column: 29,
        },
        Token {
            token_type: Plus,
            position: 30,
            line: 1,
            column: 31,
        },
        Token {
            token_type: Float(
                "2.0",
            ),
            position: 34,
            line: 1,
            column: 35,
        },
        Token {
            token_type: Semicolon,
            position: 35,
            line: 1,
            column: 36,
        },
        Token {
            token_type: RightBrace,
            position: 37,
            line: 1,
            column: 38,
        },
    ],
)
