tests/snapshots/lexer_snapshots__lexer_all@tokens-160.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/validator/p5_binary_op_arithmetic_ok.of
---
Ok(
    [
        Token {
            token_type: Function,
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "test",
            ),
            position: 13,
            line: 1,
            column: 14,
        },
        Token {
            token_type: LeftParen,
            position: 14,
            line: 1,
            column: 15,
        },
        Token {
            token_type: RightParen,
            position: 15,
            line: 1,
            column: 16,
        },
        Token {
            token_type: LeftBrace,
            position: 17,
            line: 1,
            column: 18,
        },
        Token {
            token_type: Int(
                "5",
            ),
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Plus,
            position: 21,
            line: 1,
            column: 22,
        },
        Token {
            token_type: Int(
                "5",
            ),
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Semicolon,
            position: 24,
            line: 1,
            column: 25,
        },
        Token {
            token_type: RightBrace,
            position: 26,
            line: 1,
            column: 27,
        },
    ],
)
